# githubstars

./: .gitignore  README.md  get_all_given_stars.py  pyproject.toml  remove_all_stars.py  remove_specified_stars.py
